# c_breakout

./: CMakeLists.txt  events.def  main.c  readme.md
include/: audio.h  ball.h  brick.h  config.h  event.h  event_system.h  game.h  game_screen.h  game_state.h  hud.h  map.h  maps.h  menu.h  paddle.h  texture.h  util.h
src/: audio.c  ball.c  brick.c  event_system.c  game.c  game_screen.c  game_state.c  hud.c  map.c  menu.c  paddle.c  texture.c  util.c
